--- a/app-config.yaml
+++ b/app-config.yaml
@@ -1,6 +1,6 @@
 app:
   title: Backstage Example App
-  baseUrl: http://localhost:3000
+  baseUrl: http://$HOSTNAME:3000
   #datadogRum:
   #  clientToken: '123456789'
   #  applicationId: qwerty
