--- a/app-config.yaml
+++ b/app-config.yaml
@@ -27,7 +27,7 @@ backend:
   # auth:
   #   keys:
   #     - secret: ${BACKEND_SECRET}
-  baseUrl: http://localhost:7007
+  baseUrl: http://${HOSTNAME}:7007
   listen:
     port: 7007
   database:
