--- a/app-config.yaml
+++ b/app-config.yaml
@@ -36,9 +36,8 @@ backend:
   cache:
     store: memory
   cors:
-    origin: ["http://${HOSTNAME}:3000","http://mi-backstage-cac-canary.apps.ocp02nop.batera.euskadi.eus","http://*"]
-    #methods: [GET, HEAD, PATCH, POST, PUT, DELETE]
-    methods: [DELETE]
+    origin: [all]
+    methods: [GET, HEAD, PATCH, POST, PUT, DELETE]
     credentials: true
   csp:
     connect-src: ["'self'", 'http:', 'https:']
