--- a/app-config.yaml
+++ b/app-config.yaml
@@ -49,7 +49,7 @@ backend:
       - host: example.com
       - host: '*.mozilla.org'
       - host: '*.apps.ocp02nop.batera.euskadi.eus'
-      - host: '${HOSTNAME}
+      - host: '${HOSTNAME}'
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
 # See README.md in the proxy-backend plugin for information on the configuration format
